Fixed Node.JS and Typescript issues by changing tsconfig.json. Updated Unsplash API request to request landscape oriented images and set up CSS so that it stretches to fit the page. Added new Google Font for funky header and styled the page further.

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -3,52 +3,65 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    margin: 0px;
-    /* background-color: #222; */
-    font-family: "Open Sans", sans-serif;
+    margin: 0;
+    padding: 0;
+    background: linear-gradient(to top right, #fff5e0, #ff6969, #c70039);
+    font-family: "Work Sans", sans-serif;
 }
 
 .bg-image-container {
-    background: red;
-    width: 100%;
-    height: 100vh;
-    position: absolute;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    z-index: 1;
+}
+
+.unsplash-image {
+    position: fixed; /* Fixed position */
     top: 0;
     left: 0;
-    z-index: -1;
+    min-width: 100%; /* Minimum width */
+    min-height: 100%; /* Minimum height */
+    object-fit: cover; /* Cover entire element box */
+    z-index: 1; /* Behind everything else but still visible */
 }
 
 .image-link {
-    z-index: -1;
+    z-index: 2;
 }
 
 .creator-link {
     color: white;
+    text-shadow: 1px 1px 2px black;
     position: absolute;
     padding: 1rem;
     bottom: 0;
+    z-index: 3;
 }
 
 .card-container {
-    background: #e7e7e7;
+    background: #f1efef;
     padding: 2rem;
     border-radius: 20px;
     width: 100%;
     max-width: 420px;
-    margin: 1rem;
-    box-shadow: 1px 1px 1px black;
+    /* margin: 1rem; */
+    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.7);
     display: flex;
     flex-direction: column;
     /* /* justify-content: center; */
     align-items: center;
+    z-index: 2;
 }
 
 .search {
-    margin-top: 10px;
+    margin: 10px 0px;
 }
 
 .search-bar {
-    height: 1.5rem;
+    height: 1.75rem;
     border: none;
     border-radius: 5px;
     box-shadow: -1px -1px 1px black;
@@ -56,10 +69,22 @@ body {
 
 .search-bar-button {
     margin-left: 10px;
-    padding-top: 6px;
-    height: 2rem;
-    width: 2rem;
-    border: none;
+    padding-top: 4px;
+    height: 1.95rem;
+    width: 2.05rem;
+    vertical-align: bottom;
+    /* border: none; */
     border-radius: 5px;
-    background: white;
+    background: rgb(255, 149, 0);
+    /* box-shadow: -1px -1px 1px black; */
+}
+
+.city {
+    font-family: "Bungee Spice", cursive;
+    text-shadow: 2px 2px 2px black;
+    font-size: 2rem;
+}
+
+.temp {
+    margin-bottom: 2rem;
 }
